# R-TYPE

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  NetworkClient.cpp  NetworkServer.hpp  README.md  build.sh  client_main.cpp  generate_stress_test.py  map_level1.json  map_level2.json  map_level3.json  server_main.cpp
client/: CMakeLists.txt  Doxyfile  client  mainClient.cpp
client/Network/: NetworkClient.cpp  NetworkClient.hpp
client/docs/: Why_SFML.md  mainpage.dox
client/src/: macros.hpp  main.cpp
client/src/Network/: NetworkClient.hpp
client/src/colorBlindFilter/: ColorBlindFilter.cpp  ColorBlindFilter.hpp
client/src/core/: Core.cpp  Core.hpp
client/src/entityManager/: EntityManager.cpp  EntityManager.hpp
client/src/graphics/: AnimatedSprite.cpp  AnimatedSprite.hpp  EntityManager.cpp  EntityManager.hpp  ParallaxSystem.cpp  ParallaxSystem.hpp  ResourceManager.cpp  ResourceManager.hpp  Window.cpp  Window.hpp
client/src/keybind/: KeybindManager.cpp  KeybindManager.hpp  KeybindMenu.cpp  KeybindMenu.hpp
client/src/mapEditor/: MapEditor.cpp  MapEditor.hpp
client/src/network/: NetworkClient.cpp  NetworkClient.hpp
client/src/parallax/: ParallaxSystem.cpp  ParallaxSystem.hpp
client/src/score/: ScoreDisplay.cpp  ScoreDisplay.hpp
gameEngine/: CMakeLists.txt  Doxyfile  build_test.sh  ecs_config.h.in  logs.hpp
gameEngine/components/: CMakeLists.txt
gameEngine/components/AIControlled/: CMakeLists.txt
gameEngine/components/acceleration/: CMakeLists.txt
gameEngine/components/audio/: CMakeLists.txt
gameEngine/components/collider/: CMakeLists.txt
gameEngine/components/damage/: CMakeLists.txt
gameEngine/components/domain/: CMakeLists.txt
gameEngine/components/gravity/: CMakeLists.txt
gameEngine/components/health/: CMakeLists.txt
gameEngine/components/inputControlled/: CMakeLists.txt
gameEngine/components/lifetime/: CMakeLists.txt
gameEngine/components/onPickup/: CMakeLists.txt
gameEngine/components/position/: CMakeLists.txt
gameEngine/components/renderable/: CMakeLists.txt
gameEngine/components/scoreValue/: CMakeLists.txt
gameEngine/components/text/: CMakeLists.txt
gameEngine/components/velocity/: CMakeLists.txt
gameEngine/components/weapon/: CMakeLists.txt
gameEngine/docs/: ECS_Implementation_Guide.md  Why_ecs.md  data-persistence-comparison.md  mainpage.dox
gameEngine/docs/html/: AIControlled_8hpp.html  AIControlled_8hpp.js  AIControlled_8hpp__incl.map  AIControlled_8hpp__incl.md5  AIControlled_8hpp_source.html  Acceleration_8hpp.html  Acceleration_8hpp.js  Acceleration_8hpp__dep__incl.map  Acceleration_8hpp__dep__incl.md5  Acceleration_8hpp__incl.map  Acceleration_8hpp__incl.md5  Acceleration_8hpp_source.html  Animation_8cpp.html  Animation_8cpp.js  Animation_8cpp__incl.map  Animation_8cpp__incl.md5  Animation_8cpp_source.html  Animation_8hpp.html  Animation_8hpp.js  Animation_8hpp__dep__incl.map  Animation_8hpp__dep__incl.md5  Animation_8hpp__incl.map  Animation_8hpp__incl.md5  Animation_8hpp_source.html  Audio_8hpp.html  Audio_8hpp.js  Audio_8hpp__incl.map  Audio_8hpp__incl.md5  Audio_8hpp_source.html  Clock_8hpp.html  Clock_8hpp.js  Clock_8hpp__dep__incl.map  Clock_8hpp__dep__incl.md5  Clock_8hpp__incl.map  Clock_8hpp__incl.md5  Clock_8hpp_source.html  Collider_8hpp.html  Collider_8hpp.js  Collider_8hpp__dep__incl.map  Collider_8hpp__dep__incl.md5  (+1107 more)
gameEngine/ecs/: Clock.hpp  Component.hpp  ComponentRegistry.hpp  EntityManager.hpp  EntityManger.hpp  Registry.hpp  SparseSet.hpp  System.hpp  Types.hpp  utils.hpp
gameEngine/ecs/components/: AComponent.cpp  AComponent.hpp  IComponent.hpp  README.md
gameEngine/ecs/systems/: ASystem.cpp  ASystem.hpp  ISystem.hpp
gameEngine/systems/: CMakeLists.txt
gameEngine/systems/FPApplyGravity/: CMakeLists.txt
gameEngine/systems/FPInputHandler/: CMakeLists.txt
gameEngine/systems/FPMotion/: CMakeLists.txt
gameEngine/systems/animation/: CMakeLists.txt
gameEngine/systems/collision/: CMakeLists.txt
gameEngine/systems/death/: CMakeLists.txt
gameEngine/systems/domainHandler/: CMakeLists.txt
gameEngine/systems/inputHandler/: CMakeLists.txt
gameEngine/systems/motion/: CMakeLists.txt
gameEngine/tests/: CMakeLists.txt  componentRegistry_tests.cpp  ecs_bench.cpp  entityManager_tests.cpp  registry_tests.cpp  sparseSet_tests.cpp
maps/: map_generator  (+1 more)
server/: CMakeLists.txt  Doxyfile  mainServer.cpp  r-type_server  server
server/Network/: NetworkServer.cpp  NetworkServer.hpp
server/doc/: protocol.md  study-comparaison.md
server/docs/: mainpage.dox  protocol.md  security-analysis.md  study-comparaison.md
server/docs/html/: NetworkServer_8cpp.html  NetworkServer_8cpp.js  NetworkServer_8cpp__incl.map  NetworkServer_8cpp__incl.md5  NetworkServer_8cpp_a053b64d0725ca7fc6decff0d6d24f231_icgraph.map  NetworkServer_8cpp_a053b64d0725ca7fc6decff0d6d24f231_icgraph.md5  NetworkServer_8cpp_source.html  NetworkServer_8hpp.html  NetworkServer_8hpp.js  NetworkServer_8hpp__dep__incl.map  NetworkServer_8hpp__dep__incl.md5  NetworkServer_8hpp__incl.map  NetworkServer_8hpp__incl.md5  NetworkServer_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classrtype_1_1NetworkServer-members.html  classrtype_1_1NetworkServer.html  classrtype_1_1NetworkServer.js  classrtype_1_1NetworkServer_1_1NetworkServerError-members.html  classrtype_1_1NetworkServer_1_1NetworkServerError.html  classrtype_1_1NetworkServer_1_1NetworkServerError.js  classrtype_1_1NetworkServer_1_1NetworkServerError__inherit__graph.map  classrtype_1_1NetworkServer_1_1NetworkServerError__inherit__graph.md5  classrtype_1_1NetworkServer_a022c5d221a022804160b187fbb8fe036_icgraph.map  classrtype_1_1NetworkServer_a022c5d221a022804160b187fbb8fe036_icgraph.md5  classrtype_1_1NetworkServer_a023fe1b710c0f504eb9142f707fea4f7_cgraph.map  classrtype_1_1NetworkServer_a023fe1b710c0f504eb9142f707fea4f7_cgraph.md5  classrtype_1_1NetworkServer_a023fe1b710c0f504eb9142f707fea4f7_icgraph.map  classrtype_1_1NetworkServer_a023fe1b710c0f504eb9142f707fea4f7_icgraph.md5  (+159 more)
server/src/: main.cpp
server/tests/: test_networkServer.cpp
(+263 files in other folders)
